--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aula GitHub</title>
 </head>
 <body>
     <h1>
-        
+        Aula sobre GitHub
     </h1>
 </body>
 </html>
